--- a/references.bib
+++ b/references.bib
@@ -329,8 +329,14 @@
   year = {2023},
   title = {FR Y-14M Capital Assessments and Stress Testing},
   url = {https://www.federalreserve.gov/apps/reportingforms/Report/Index/FR_Y-14M},
-}
-
+},
+@report{CFPB2023,
+  author = {Consumer Financial Protection Bureau},
+  year = {2023},
+  title = {2023 The Consumer Credit Card Market Report},
+  url = {https://files.consumerfinance.gov/f/documents/cfpb_consumer-credit-card-market-report_2023.pdf}
+},
+#https://www.federalreserve.gov/publications/fr-y-14-qas/y-14-qas.htm
 #Hierarchical modeling and analysis for spatial data
 #Data Analysis Using Regression and Multilevel/Hierarchical Models
 #General Pitfalls of Model-Agnostic Interpretation Methods for Machine Learning Models
