--- a/references.bib
+++ b/references.bib
@@ -336,6 +336,19 @@
   title = {2023 The Consumer Credit Card Market Report},
   url = {https://files.consumerfinance.gov/f/documents/cfpb_consumer-credit-card-market-report_2023.pdf}
 },
+@report{FedCharge,
+  author = {US Federal Reserve},
+  year = {2023},
+  title = {Charge-Off and Delinquency Rates on Loans and Leases at Commercial Banks},
+  url = {https://www.federalreserve.gov/releases/chargeoff/delallnsa.htm}
+
+},
+@report{Fed14,
+  author = {US Federal Reserve},
+  year = {2023},
+  title = {FR Y-14 Information Collection Q&As},
+  url = {https://www.federalreserve.gov/publications/fr-y-14-qas/y-14-qas.htm}
+},
 #https://www.federalreserve.gov/publications/fr-y-14-qas/y-14-qas.htm
 #Hierarchical modeling and analysis for spatial data
 #Data Analysis Using Regression and Multilevel/Hierarchical Models
