--- a/references.bib
+++ b/references.bib
@@ -343,12 +343,16 @@
   url = {https://www.federalreserve.gov/releases/chargeoff/delallnsa.htm}
 
 },
-@report{Fed14,
-  author = {US Federal Reserve},
-  year = {2023},
-  title = {FR Y-14 Information Collection Q&As},
-  url = {https://www.federalreserve.gov/publications/fr-y-14-qas/y-14-qas.htm}
-},
+@article{GelmanWf,
+  author = {Gelman, Andrew and Vehtari, Aki and Simpson, Daniel and Margossian, Charles C. and Carpenter, Bob and Yao, Yuling and Bürkner, Paul-Christian and Kennedy, Lauren and Gabry, Jonah and Modrák, Martin},
+  title = {Bayesian workflow},
+  year = {2020},
+  month = {November},
+  day = {2},
+  doi = {10.48550/arXiv.2011.01808}
+}
+https://doi.org/10.48550/arXiv.2011.01808
+
 #https://www.federalreserve.gov/publications/fr-y-14-qas/y-14-qas.htm
 #Hierarchical modeling and analysis for spatial data
 #Data Analysis Using Regression and Multilevel/Hierarchical Models
