--- a/model_hierarchy.qmd
+++ b/model_hierarchy.qmd
@@ -142,12 +142,19 @@ The red line indicates no effect (zero), and the dots represent the random effec
 #| label: tbl-coef-hier-random
 #| tbl-cap: "Intercept and coefficients"
 #| tbl-subcap:
+#|  - "Random Effects for BankName"
 #|  - "Random Effects for Partner:BankName"
+
+ranef(top_model, condVar = FALSE)$BankName |> as.data.frame() |> 
+    rownames_to_column(var = "Entity") |> 
+    filter(!grepl("None", Entity)) |>
+    mutate(across(where(is.numeric), \(x) round(x,2))) |>  
+        rmarkdown::paged_table()    
 
 ranef(top_model, condVar = FALSE)$`Partner:BankName` |> as.data.frame() |> 
     rownames_to_column(var = "Entity") |> 
     filter(!grepl("None", Entity)) |>
-    mutate(across(where(is.numeric), \(x) round(x,4))) |>  
+    mutate(across(where(is.numeric), \(x) round(x,2))) |>  
         rmarkdown::paged_table()
 ```
 :::
@@ -156,9 +163,16 @@ From @fig-random-effect we can see that the random effect of Partnership is not 
 
 ## NAICS2
 
+Conceptually we would have been able to experiment with impact given 
+
 ```{r}
 #| warning: false
-m_naics <- lmer(UBPRE524.diff ~ NAICS2 + (1 + NAICS2 + Qtr+ UBPRB538.log.diff + UBPR3815.log.diff | BankName) + TDSP.log.diff + RRSFS.Pop.log.diff + UNRATE.log.diff + UNRATE.log.diff.lag1, data = hier_data, REML = TRUE)
+read_csv("data/Partner_NAICS.csv",show_col_types = FALSE) |> rmarkdown::paged_table()
+```
+
+```{r}
+#| warning: false
+m_naics <- lmer(UBPRE524.diff ~ NAICS2 + (1 + NAICS2 + Qtr+ UBPRB538.log.diff + UBPR3815.log.diff | BankName/Partner) + TDSP.log.diff + RRSFS.Pop.log.diff + UNRATE.log.diff + UNRATE.log.diff.lag1, data = hier_data, REML = TRUE)
 #summary(m_naics)
 #coef(m_naics)
 result_naics <- generate_fixed_random_plts(m_naics)
@@ -229,7 +243,13 @@ The red line indicates no effect (zero), and the dots represent the random effec
 ranef(m_naics, condVar = FALSE)$BankName |> as.data.frame() |> 
     rownames_to_column(var = "Entity") |> 
     filter(!grepl("None", Entity)) |>
-    mutate(across(where(is.numeric), \(x) round(x,4))) |>  
+    mutate(across(where(is.numeric), \(x) round(x,2))) |>  
         rmarkdown::paged_table()
+
+ranef(m_naics, condVar = FALSE)$`Partner:BankName` |> as.data.frame() |> 
+    rownames_to_column(var = "Entity") |> 
+    filter(!grepl("None", Entity)) |>
+    mutate(across(where(is.numeric), \(x) round(x,2))) |>  
+        rmarkdown::paged_table()        
 ```
 :::
